syncs prod-poc-dm-reward-2210-2211-0-to-ahamo-prod added in Hightouch

--- a/docomo_oneshot/syncs/prod-poc-dm-reward-2210-2211-0-to-ahamo-prod.yaml
+++ b/docomo_oneshot/syncs/prod-poc-dm-reward-2210-2211-0-to-ahamo-prod.yaml
@@ -1,5 +1,5 @@
 model: prod-poc-dm-reward-2210-2211-0
-destination: ahamo-test
+destination: ahamo-prod
 config:
   type: event
   mappings:
@@ -59,4 +59,4 @@ config:
       type: standard
 schedule:
   type: manual
-schedulePaused: true
+schedulePaused: false
