--- a/docomo_oneshot/models/prod-poc-dm-danime-abolished-2210-2211.yaml
+++ b/docomo_oneshot/models/prod-poc-dm-danime-abolished-2210-2211.yaml
@@ -3,6 +3,7 @@ source: snowflake
 type: raw_sql
 rawSql: |-
   SELECT
+        id,
         '[ahamo]dアニメストア解約' AS "event_type",
         DM_DANIME_ABOLISHED_2210_2211.ACCTID AS "user_id",
         EXTRACT(EPOCH from CONVERT_TIMEZONE('Asia/Tokyo', 'UTC', ORDER_REGISTRATION_DATE_TS)) AS "time",
@@ -11,6 +12,6 @@ rawSql: |-
         DM_DANIME_ABOLISHED_2210_2211.USE_CASE_NAME AS "サービス名",
         DM_DANIME_ABOLISHED_2210_2211.ORDER_REGISTRATION_DAY AS "適用日",
         DM_DANIME_ABOLISHED_2210_2211.ORDER_REGISTRATION_DATE AS "申し込み日"
-  FROM DM_DANIME_ABOLISHED_2210_2211
+  FROM POC.DM_DANIME_ABOLISHED_2210_2211
 isSchema: false
 primaryKey: ID
