--- a/docomo_oneshot/models/prod-poc-dm-dpoint-give-history-2210-2211-0.yaml
+++ b/docomo_oneshot/models/prod-poc-dm-dpoint-give-history-2210-2211-0.yaml
@@ -1,7 +1,7 @@
 name: prod_POC.DM_DPOINT_GIVE_HISTORY_2210_2211_0
 source: snowflake
 type: raw_sql
-rawSql: |-
+rawSql: >-
   SELECT
         id,
         '[ahamo]dポイント付与' AS "event_type",
@@ -14,6 +14,7 @@ rawSql: |-
         DM_DPOINT_GIVE_HISTORY_2210_2211.DPOINT_GIVE_HISTORY_DISPLAY_NAME AS "付与費目",
         DM_DPOINT_GIVE_HISTORY_2210_2211.kikan_limit_flg AS "有効期限有無",
         DM_DPOINT_GIVE_HISTORY_2210_2211.PERIOD_USE_LIMITED_DPOINT_MEASURES_END_DAY AS "有効期限"
-  FROM POC.DM_DPOINT_GIVE_HISTORY_2210_2211_0 AS "DM_DPOINT_GIVE_HISTORY_2210_2211"
+  FROM POC.DM_DPOINT_GIVE_HISTORY_2210_2211_0 AS
+  "DM_DPOINT_GIVE_HISTORY_2210_2211"
 isSchema: false
 primaryKey: ID
