models prod-poc-dm-danime-give-2210-2211 changed in Hightouch

--- a/docomo_oneshot/models/prod-poc-dm-danime-give-2210-2211.yaml
+++ b/docomo_oneshot/models/prod-poc-dm-danime-give-2210-2211.yaml
@@ -13,5 +13,6 @@ rawSql: |-
         DM_DANIME_GIVE_2210_2211.ORDER_REGISTRATION_DAY AS "適用日",
         DM_DANIME_GIVE_2210_2211.ORDER_REGISTRATION_DATE AS "申し込み日"
   FROM POC.DM_DANIME_GIVE_2210_2211
+  WHERE DM_DANIME_GIVE_2210_2211.ACCTID IS NOT null
 isSchema: false
 primaryKey: ID
