models prod-poc-dm-dpoint-give-history-2210-2211-0 changed in Hightouch

--- a/docomo_oneshot/models/prod-poc-dm-dpoint-give-history-2210-2211-0.yaml
+++ b/docomo_oneshot/models/prod-poc-dm-dpoint-give-history-2210-2211-0.yaml
@@ -16,5 +16,7 @@ rawSql: >-
         DM_DPOINT_GIVE_HISTORY_2210_2211.PERIOD_USE_LIMITED_DPOINT_MEASURES_END_DAY AS "有効期限"
   FROM POC.DM_DPOINT_GIVE_HISTORY_2210_2211_0 AS
   "DM_DPOINT_GIVE_HISTORY_2210_2211"
+
+  WHERE DM_DPOINT_GIVE_HISTORY_2210_2211.ACCTID IS NOT NULL
 isSchema: false
 primaryKey: ID
