models prod-poc-dm-ahamo-kakehodai-give-abolished-2210-2211 changed in Hightouch

--- a/docomo_oneshot/models/prod-poc-dm-ahamo-kakehodai-give-abolished-2210-2211.yaml
+++ b/docomo_oneshot/models/prod-poc-dm-ahamo-kakehodai-give-abolished-2210-2211.yaml
@@ -13,5 +13,6 @@ rawSql: |-
     DM_AHAMO_KAKEHODAI_GIVE_ABOLISHED_2210_2211.AHAMO_KAKEHODAI_CONTRACT_DAY AS "かけ放題_適用日",
     DM_AHAMO_KAKEHODAI_GIVE_ABOLISHED_2210_2211.AHAMO_KAKEHODAI_APPLY_CODE AS "かけ放題_契約フラグ"
   FROM POC.DM_AHAMO_KAKEHODAI_GIVE_ABOLISHED_2210_2211
+  WHERE DM_AHAMO_KAKEHODAI_GIVE_ABOLISHED_2210_2211.ACCTID IS NOT NULL
 isSchema: false
 primaryKey: ID
